--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>
                    <p id="artist-caption"> Who could it be?  </p>
                     <div id="youtube">
-                            <iframe width="200" height="90" id="iframe-id" src="https://www.youtube.com/embed/QjlFqgRbICY?start=50&autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                            <iframe width="200" height="90" id="iframe-id" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                       </div>
                     <p id="win-count"> Wins: 0  </p>
                 </div>
